# CreateProject

./: BeaButton.qml  BeaCheckBox.qml  CMakeLists.txt  CreateProject.pro  ProjectConfig.cpp  ProjectConfig.h  README.md  Temlpate.qrc  config.cpp  config.h  fileprocess.cpp  fileprocess.h  image.qrc  listdatalist.cpp  listdatalist.h  listdatamodel.cpp  listdatamodel.h  main.cpp  main.qml  myapp.rc  qml.qrc  task.cpp  task.h  widget.cpp  widget.h  widget.ui
source/: font.qrc  image.qrc  main.qml  qml.qrc
